# dialogflow

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  README_zh-CN.md  build.rs  check-new-version.json  musl-zcc  musl-zcxx  r.bat  version.json
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: README.md
examples/html/: demo.html
frontend/: .env.development  .env.production  .gitignore  README.md  b.bat  package.json  packages.txt  u.bat  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css  tools.js
frontend/src/assets/lang/: en.js  i18n.js  lang.js  zh.js
frontend/src/components/: Demos.vue  Guide.vue  Home.vue
frontend/src/components/flow/: MainFlow.vue  SubFlow.vue
frontend/src/components/flow/nodes/: CollectNode.vue  ConditionNode.vue  DialogNode.vue  EleTipTap.vue  EndNode.vue  ExternalHttpNode.vue  GotoNode.vue  KnowledgeBaseAnswerNode.vue  LlmChatNode.vue  SendEmailNode.vue
frontend/src/components/knowledge/: DocList.vue  IntentDetail.vue  IntentList.vue  QnAList.vue
frontend/src/components/management/: GlobalSettings.vue  Settings.vue
frontend/src/components/robot/: RobotDetail.vue  RobotFrame.vue
frontend/src/components/variable/: Variable.vue
java-sdk/: pom.xml
java-sdk/src/main/java/io/github/dialogflowchatbot/: Main.java  RequestHandler.java
java-sdk/src/main/java/io/github/dialogflowchatbot/sdk/: Answer.java  CollectData.java  ImportVariable.java  RequestData.java  Response.java
java-sdk/src/main/java/io/github/dialogflowchatbot/util/: HttpUtil.java
java-sdk/src/test/java/io/github/dialogflowchatbot/: RequestHandlerTest.java
sdk/java/: pom.xml
sdk/java/src/main/java/io/github/dialogflowchatbot/: Main.java  RequestHandler.java
sdk/java/src/main/java/io/github/dialogflowchatbot/sdk/: Answer.java  CollectData.java  ExtraData.java  NextAction.java  ResponseData.java  UserInputResult.java  VarData.java  VarKind.java
sdk/java/src/test/java/io/github/dialogflowchatbot/: RequestHandlerTest.java
sdk/javascript/: index.js
sdk/python/: README.md  sdk.py
src/: lib.rs  main.rs
src/ai/: asr.rs  audio.rs  chat.rs  completion.rs  crud.rs  embedding.rs  gemma.rs  huggingface.rs  llama.rs  mod.rs  phi3.rs  token_output_stream.rs  tts.rs
src/db/: embedding.rs  embedding_ddl.sql  embedding_lance.rs  embedding_sqlite.rs  mod.rs
src/flow/: mod.rs
src/flow/demo/: demo_collect.txt  demo_notify.txt  demo_notify_en.txt  demo_repay.txt  mod.rs
src/flow/mainflow/: crud.rs  dto.rs  mod.rs
src/flow/rt/: collector.rs  condition.rs  context.rs  convertor.rs  crud.rs  dto.rs  executor.rs  facade.rs  mod.rs  node.rs  node_dyn.rs  node_typetag.rs
src/flow/subflow/: crud.rs  dto.rs
src/intent/: crud.rs  crud2.rs  detector.rs  dto.rs  mod.rs  phrase.rs
src/kb/: crud.rs  doc.rs  dto.rs  mod.rs  qa.rs
src/man/: settings.rs
src/resources/assets/assets/: index-5cCgN66_.css  index-D-8kzAxq.js  index-DC6GrqPz.js  index-DIXWMYNZ.css
src/result/: mod.rs
src/robot/: crud.rs  dto.rs
src/test/: reqwest.rs
src/variable/: crud.rs  dto.rs
src/web/: asset.rs  asset.txt  mod.rs  server.rs
