[package]
name = "dialogflow"
version = "1.17.5"
edition = "2021"
homepage = "https://dialogflowchatbot.github.io/"
authors = ["dialogflowchatbot <dialogflow@yeah.net>"]

[lib]
name = "dialogflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/djkoloski/rust_serialization_benchmark

[dependencies]
# For lancedb
# arrow-array = "52.2.0"
# arrow-schema = "52.2.0"
# lzma-sys = { version = "*", features = ["static"] }
# End
# artful = "0.1.1"
anyhow = "1.0"
axum = {version = "0.8", features = ["query", "tokio", "macros", "multipart"]}
bigdecimal = "0.4"
# bytes = "1.9"
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle = { version = "0.8", package = "candle-core", default-features = false }
# candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core", default-features = false }
candle-nn = "0.8"
# candle-nn = { git = "https://github.com/huggingface/candle.git" }
# candle-onnx = "0.8"
# candle-transformers = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { version = "0.8" }
# candle-transformers = { version = "0.8", features = ["flash-attn"] }
# crossbeam-channel = "0.5"
frand = "0.10"
tokenizers = "0.21"
# candle_embed = "0.1"
colored = "3.0"
# dashmap = "5.5.1"
enum_dispatch = "0.3"
erased-serde = "0.4"
#fastembed = "3.6"
futures = "0.3"
futures-util = "0.3"
# hf-hub = { path = "./rslibs/hf-hub", default-features = false, features = ["tokio"] }
itoa = "1.0"
# jieba-rs = "0.6.7"
# oasysdb = "0.7.3"
# once_cell = "1.20"
# ort = { version = "=2.0.0-rc.0", default-features = false }
# paste = "1.0"
redb = "2.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream"] }
rkyv = {version = "0.8", features = ["aligned", "alloc", "bytecheck"]}
scru128 = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
scraper = "0.22"
# snmalloc-rs = "0.3.4" # 暂时不支持MUSL
# simd-json = "0.10"
# simsearch = "0.2"
# strsim = "0.10.0"
# textdistance = "1.0.2"
time = { version = "0.3", features = ["formatting"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
# typetag = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
# tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "smtp-transport", "tokio1-native-tls", "pool"]}
unicase = "2.8.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
lopdf = "0.35.0"
# docx-rs = "0.4.17"
# lancedb = "0.13.0"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
validator = "0.20.0"
zip = "2.2"
quick-xml = "0.37"
# usearch = "2.17"
# cxx = "1.0"
# triple_accel = "0.4.0"
# [target.'cfg(not(target_os = "linux"))'.dependencies]
sqlite-vec = "0.1.6"
# sqlite-vec = { path = "/mnt/d/work/sqlite-vec/bindings/rust/" }

[build-dependencies]
flate2 = "1.0"
# cc = "1.2.8"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.59", features = ["Win32_Globalization","Win32_System_SystemServices"]}

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
# https://doc.rust-lang.org/reference/conditional-compilation.html
[target.'cfg(target_env = "gnu")'.dependencies]
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true
opt-level = 0
lto = false
panic = 'unwind'
rpath = false

[profile.test]
debug = 1

[profile.bench]
debug = 1

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
